kubernetes/blue-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-api-blue
  namespace: ecommerce-dev
  labels:
    app: ecommerce-api-blue
    deployment-color: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-api-blue
  template:
    metadata:
      labels:
        app: ecommerce-api-blue
        deployment-color: blue
    spec:
      serviceAccountName: ecommerce-api-sa

      imagePullSecrets:
        - name: ecr-pull-secret

      containers:
        - name: ecommerce-api
          image: 099731416734.dkr.ecr.ap-south-2.amazonaws.com/ecommerce-devops-platform:IMAGE_TAG
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 5000

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3

          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 12
            periodSeconds: 10
            timeoutSeconds: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-api-green
  namespace: ecommerce-dev
  labels:
    app: ecommerce-api-green
    deployment-color: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-api-green
  template:
    metadata:
      labels:
        app: ecommerce-api-green
        deployment-color: green
    spec:
      serviceAccountName: ecommerce-api-sa

      imagePullSecrets:
        - name: ecr-pull-secret

      containers:
        - name: ecommerce-api
          image: 099731416734.dkr.ecr.ap-south-2.amazonaws.com/ecommerce-devops-platform:IMAGE_TAG
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 5000

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3

          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 12
            periodSeconds: 10
            timeoutSeconds: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
