kubernetes/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-api-canary
  namespace: ecommerce-dev
  labels:
    app: ecommerce-api-canary
    deployment-track: canary
spec:
  type: ClusterIP
  selector:
    app: ecommerce-api-canary
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
