kubernetes/canary-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ecommerce-api-canary
  namespace: ecommerce-dev
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ecommerce.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: ecommerce-api-canary-traffic
          kind: TraefikService
